<resources>
    <string name="app_name">PHF_Android</string>
    <string name="registrar">RGISTRAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="usuari">USUARI</string>
    <string name="telefon">NUMERO DE TELEFON</string>
    <string name="correu">CORREU</string>
    <string name="nom">NOM</string>
    <string name="cognom">COGNOMS</string>
    <string name="usuar">NOM USUARI</string>
    <string name="dni">DNI</string>
    <string name="contrasenya">CONTRASENYA</string>
    <string name="canviarContrasenya">CANVIAR CONTRASENYA</string>
    <string name="contrasenyaAnterior">CONTRASENYA ANTERIOR</string>
    <string name="contrasenyaNova">CONTRASENYA NOVA</string>
    <string name="contrasenyaRepetida">REPETEIX LA CONTRASENYA</string>
    <string name="nomApp">PHF</string>
    <string name="reserves">RESERVES</string>
    <string name="mascotes">MASCOTES</string>
    <string name="mascotes1">MASCOTES:</string>
    <string name="ubucacio">LLOC DE DESTI</string>
    <string name="dataInici">DATA INICI</string>
    <string name="dataFi">DATA FI</string>
    <string name="ItemDataFi">Data fi:</string>
    <string name="ItemDataInici">Data inici:</string>
    <string name="ItemNom">Nom:</string>
    <string name="ItemPreu">Preu:</string>
    <string name="ordenar">ORDENAR</string>
    <string name="filtrar">FILTRAR</string>
    <string name="tornar">TORNAR</string>
    <string name="afegirMascota">AFEGIR MASCOTA</string>
    <string name="afegirTarjeta">AFEGIR TARJETA</string>
    <string name="TarjetaNova">TARJETA NOVA</string>
    <string name="buscar">BUSCAR</string>
    <string name="pes">PES</string>
    <string name="edat">EDAT</string>
    <string name="tipus">TIPUS</string>
    <string name="cartilla">CARTILLA</string>
    <string name="historial">HE ESTAT</string>
    <string name="afegirMascotaMas">AFEGEIX UNA MASCOTA</string>
    <string name="perfil">PERFIL</string>
    <string name="app">APP</string>
    <string name="pagament">METODES DE PAGAMENT</string>
    <string name="informacioLegal">INFORMACIO LEGAL</string>
    <string name="veureCameres">VEURE CAMERES:</string>
    <string name="cvv">CVV:</string>
    <string name="dataCaducitat2">DATA DE CADUCITAT:</string>
    <string name="numeroTarjeta">NUMERO TARJETA:</string>
    <string name="dataCaducitat">Data de caducitat:</string>
    <string name="numTarjeta">Num Tarjeta:</string>
    <string name="GuarderiesTop">Top Guarderies</string>
    <string-array name="mascota_tipus">
        <item>Gos</item>
        <item>Gat</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>