<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAfegirMascota">

    <TextView
        android:id="@+id/txtAfegirMascotaTitol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/anton"
        android:text="@string/afegirMascota"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAfegirMascotaTipus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/anton"
        android:text="@string/tipus"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAfegirMascotaNom" />

    <EditText
        android:id="@+id/txtAfegirMascotaNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/nom"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/txtAfegirMascotaTitol"
        tools:layout_editor_absoluteX="9dp" />

    <EditText
        android:id="@+id/txtAfegirMascotaEdat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edat"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/spiAfegirMAscotaTipus"
        tools:layout_editor_absoluteX="10dp" />

    <EditText
        android:id="@+id/txtAfegirMascotaPes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/pes"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/txtAfegirMascotaEdat"
        tools:layout_editor_absoluteX="9dp" />

    <Spinner
        android:id="@+id/spiAfegirMAscotaTipus"
        android:layout_width="410dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:entries="@array/mascota_tipus"
        app:layout_constraintTop_toBottomOf="@+id/txtAfegirMascotaTipus"
        tools:layout_editor_absoluteX="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>