<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivityCanviarContrasenya">

    <TextView
        android:id="@+id/txtCanviarContrasenyaTitol"
        android:layout_width="390dp"
        android:layout_height="112dp"
        android:layout_marginTop="36dp"
        android:enabled="false"
        android:text="@string/canviarContrasenya"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/canviarContrasenya" />

    <Button
        android:id="@+id/btnCanviarContrasenyaGuardar"
        android:layout_width="308dp"
        android:layout_height="43dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/boto_rodo"
        android:text="@string/guardar"
        android:textColor="#000000"
        app:backgroundTint="@null"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtCanviarContrasenyaNova"
        android:layout_width="248dp"
        android:layout_height="43dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/contrasenyaNova"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448" />

    <EditText
        android:id="@+id/txtCanviarContrasenyaRepeteix"
        android:layout_width="247dp"
        android:layout_height="41dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/contrasenyaRepetida"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />

    <EditText
        android:id="@+id/txtCanviarContrasenyaAnterior"
        android:layout_width="247dp"
        android:layout_height="43dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/contrasenyaAnterior"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

</androidx.constraintlayout.widget.ConstraintLayout>