<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivityDetallMascota">

  <TextView
      android:id="@+id/txtDetallMascotaHistorial"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:fontFamily="@font/anton"
      android:text="@string/historial"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.13"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtDetallMascotaCartilla" />

  <TextView
      android:id="@+id/txtDetallMascotaNom"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:fontFamily="@font/anton"
      android:text="@string/nom"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/txtDetallMascotaPes"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:fontFamily="@font/anton"
      android:text="@string/pes"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="20sp"
      app:layout_constraintEnd_toStartOf="@+id/txtDetallMascotaEdat"
      app:layout_constraintHorizontal_bias="0.301"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/pcbDetallMascotaFoto" />

  <TextView
      android:id="@+id/txtDetallMascotaTipus"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="44dp"
      android:fontFamily="@font/anton"
      android:text="@string/tipus"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/pcbDetallMascotaFoto" />

  <TextView
      android:id="@+id/txtDetallMascotaEdat"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="100dp"
      android:fontFamily="@font/anton"
      android:text="@string/edat"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="20sp"
      app:layout_constraintEnd_toStartOf="@+id/txtDetallMascotaTipus"
      app:layout_constraintTop_toBottomOf="@+id/pcbDetallMascotaFoto" />

  <TextView
      android:id="@+id/txtDetallMascotaCartilla"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/anton"
      android:text="@string/cartilla"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtDetallMascotaEdat" />

  <ImageView
      android:id="@+id/pcbDetallMascotaFoto"
      android:layout_width="130dp"
      android:layout_height="127dp"
      android:layout_marginTop="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtDetallMascotaNom"
      tools:srcCompat="@drawable/logophf" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/lisDetallMascotaHistorial"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="20dp"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtDetallMascotaHistorial" />
</androidx.constraintlayout.widget.ConstraintLayout>